# ecommerce

./: .envrc  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  cart.py  cart_item.py  category.py  order.py  product.py  user.py
app/routers/: auth_api.py  cart_api.py  category_api.py  user_api.py
app/schemas/: cart_schema.py  user_schema.py
app/services/: auth_service.py  cart_service.py  user_service.py
app/utils/: auth_utils.py
migrations/: env.py
migrations/versions/: f9957278e4a8_added_user_table.py
requirements/: dev.txt  prod.txt  test.txt
test/: conftest.py  test_main.py  test_user.py
